--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "d3-dsv": "^1.2.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongoose": "^5.8.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
