--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "dyvol_mern",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dynamicvol.com/test/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
