--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb-stitch-browser-sdk": "^4.8.0",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "node": "^14.8.0"
   }
 }
