--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongoose": "^5.8.3",
-    "node": "^14.8.0"
+    "node": "^14.8.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.1.1"
   }
 }
